tests/neg/parser_decl_qualifier_missing_type.baa
// RUN: expect-fail
// EXPECT: متوقع تصريح

ساكن ثابت = ١.

صحيح الرئيسية() {
    إرجع ٠.
}
